--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryDark"
     android:gravity="center"
-    android:background="@color/colorPrimaryDark">
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="130dp"
-        android:layout_marginBottom="15dp"
-        android:background="@mipmap/ic_launcher_steel_new_round"
-        android:contentDescription="@string/nav_image" />
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        android:gravity="center"
+        android:text="@string/app_name"
+        android:textColor="@color/colorSidenavText"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
