--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/length_entry"
                 android:layout_width="125dp"
                 android:layout_height="50dp"
-                android:inputType="number"
+                android:inputType="numberDecimal"
                 tools:layout_editor_absoluteX="133dp"
                 tools:layout_editor_absoluteY="606dp" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -120,7 +120,7 @@
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             ads:adSize="BANNER"
             ads:adUnitId="@string/testBannerAd"
             app:layout_constraintBottom_toBottomOf="parent"
