--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/menuAbout"
+        android:title="@string/menuAbout" />
+
+    <item
         android:id="@+id/menuExit"
-        android:title="@string/menuExit"
-        />
+        android:title="@string/menuExit" />
+
 </menu>
