--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item android:id="@+id/about"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/menuAbout"/>
+
     <item android:id="@+id/exit"
         android:icon="@drawable/ic_power_settings_new_black_24dp"
         android:title="@string/menuExit"/>
