--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             ads:adSize="BANNER"
-            ads:adUnitId="@string/testBannerAd"
+            ads:adUnitId="@string/bannerAd_1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
